--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <html>
 <head>
 		<title>Morrowmade</title>
+        <link type="text/css" rel="stylesheet" href="/assets/css/bootstrap.min.css" />
 </head>
 <body>
 		<div class="container">
 				<h1>Morrowmade</h1>
 		</div>
+        <script src="/assets/js/bootstrap.min.js"></script>
 </body>
 </html>
 
