--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,46 @@
 <head>
 		<title>Morrowmade</title>
         <link type="text/css" rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+        <link type="text/css" rel="stylesheet" href="/assets/css/app.css" />
 </head>
 <body>
-		<div class="container">
-				<h1>Morrowmade</h1>
-		</div>
-        <script src="/assets/js/bootstrap.min.js"></script>
+	<div class="container text-center">
+        <div class="row">
+            <h1 class="text-hide" style="background-image: url('http://placehold.it/100x100'); width: 100px; height: 100px; margin:0 auto;">Morrowmade</h1>
+        </div>
+        
+        <div class="row">
+            <div class="col">
+                <h2 class="display-3">Calling all <span class="text-info">hackers</span>.</h2>
+                <h6 class="display-6">Here is some text. Here is some text. Here is some text.</h6>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row justify-content-lg-center">
+                <div class="col col-lg-auto">
+                    <form class="form-inline" method="POST" action="#">
+                        <div class="input-group mr-2">
+                            <input type="text" class="form-control" placeholder="First name" name="first_name"/>
+                        </div>
+
+                        <div class="input-group mr-2">
+                            <input type="text" class="form-control" placeholder="Last name" name="last_name"/>
+                        </div>
+
+                        <div class="input-group mr-2">
+                            <input type="email" class="form-control" placeholder="Email" name="email"/>
+                        </div>
+
+                        <div class="input-group">
+                            <input type="submit" class="btn btn-info" value="Submit"/>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+	</div>
+    <script src="/assets/js/bootstrap.min.js"></script>
 </body>
 </html>
 
