--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
 <body>
 	<div class="container text-center">
         <div class="row">
-            <h1 class="text-hide" style="background-image: url('http://placehold.it/100x100'); width: 100px; height: 100px; margin:0 auto;">Morrowmade</h1>
+            <div style=" border:1px solid #b3b3b3; border-radius:50px; padding:18px 18px 10px 18px; margin:0 auto;">
+                <h1 class="text-hide" style="background-image: url('/assets/img/morrowmade.png'); width: 50px; height: 50px;">Morrowmade</h1>
+            </div>
+            
         </div>
         
         <div class="row">
