Added animations for color changes

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,16 @@
         
         <div class="row">
             <div class="col">
-                <h2 class="display-3">Calling all <span class="text-info">hackers</span>.</h2>
-                <h6 class="display-6">Here is some text. Here is some text. Here is some text.</h6>
+                <h2 class="display-3">Calling all <span id="cta-switcher" class="text-info">makers</span>.</h2>
             </div>
         </div>
+
+        <div class="row justify-content-lg-center">
+            <div class="col-lg-6">
+                <p class="lead"><span class="text-info" id="morrowmade-lead">Morrowmade is a place for innovators.</span> We're building a community and starting a makerspace in metro Atlanta. Want to find out more? Sign up to get first access to what's coming.</p>
+            </div>
+        </div>
+
         <div class="container">
             <div class="row justify-content-lg-center">
                 <div class="col col-lg-auto">
@@ -41,5 +47,7 @@
         </div>
     </div>
     <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="/assets/js/app.js"></script>
 </body>
 </html>
