--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,14 @@
     <title>Morrowmade</title>
     <link type="text/css" rel="stylesheet" href="/assets/css/bootstrap.min.css" />
     <link type="text/css" rel="stylesheet" href="/assets/css/app.css" />
+    <meta name="viewport" content="initial-scale=1.0">
 </head>
 <body>
     <div class="container text-center">
         <div class="row">
-            <div class="logo">
-                <h1 class="text-hide" style="background-image: url('/assets/img/morrowmade.png'); background-size:50px; width: 50px; height: 50px;">Morrowmade</h1>
-            </div>
+                <div class="logo">
+                    <h1 class="text-hide" style="background-image: url('/assets/img/morrowmade.png'); background-size:50px; width: 50px; height: 50px;">Morrowmade</h1>
+                </div>
             
         </div>
         
@@ -46,6 +47,7 @@
             </div>
         </div>
     </div>
+
     <script src="/assets/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="/assets/js/app.js"></script>
