Added typed.js for typing animation.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         
         <div class="row">
             <div class="col">
-                <h2 class="display-3">Calling all <span id="cta-switcher" class="text-info">makers</span>.</h2>
+                <h2 class="display-3">Calling all <span id="cta-switcher" class="text-info"></span>.</h2>
             </div>
         </div>
 
@@ -48,8 +48,10 @@
         </div>
     </div>
 
+
     <script src="/assets/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="/assets/js/typed.js"></script>
     <script src="/assets/js/app.js"></script>
 </body>
 </html>
