Tested CSS for compability

--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,13 @@
         
         <div class="row">
             <div class="col">
-                <h2 class="display-3">Calling all <span id="cta-switcher" class="text-info"></span>.</h2>
+                <h2 class="display-3">Calling all <br class="d-md-none"/><span id="cta-switcher" class="text-info"></span>.</h2>
             </div>
         </div>
 
         <div class="row justify-content-lg-center">
-            <div class="col-lg-6">
-                <p class="lead"><span class="text-info" id="morrowmade-lead">Morrowmade is a place for innovators.</span> We're building a community and starting a makerspace in metro Atlanta. Want to find out more? Sign up to get first access to what's coming.</p>
+            <div class="col-lg-8">
+                <p class="lead"><span class="text-info" id="morrowmade-lead">Morrowmade is a place for innovators.</span> We're building a community and starting a makerspace in metro Atlanta. Want to find out more? <br class="d-none d-md-block"/>Sign up to get first access to what's coming.</p>
             </div>
         </div>
 
@@ -33,12 +33,15 @@
                         <div class="input-group mr-2">
                             <input type="text" class="form-control" placeholder="First name" name="first_name"/>
                         </div>
+
                         <div class="input-group mr-2">
                             <input type="text" class="form-control" placeholder="Last name" name="last_name"/>
                         </div>
+                         
                         <div class="input-group mr-2">
                             <input type="email" class="form-control" placeholder="Email" name="email"/>
                         </div>
+
                         <div class="input-group">
                             <input type="submit" class="btn btn-info" value="Submit"/>
                         </div>
