--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,16 @@
             </div>
 
             <div class="row justify-content-lg-center">
-                <div class="col-lg-8">
-                    <p class="lead"><span class="text-info" id="morrowmade-lead">Morrowmade is a place for innovators.</span> We're building a community and starting a makerspace in metro Atlanta. Want to find out more? <br class="d-none d-md-block"/>Sign up below to get first access to what's coming.</p>
+                <div class="col-lg-10">
+                    <p class="lead"><span class="text-info" id="morrowmade-lead">Morrowmade is a place for innovators.</span><br/>We're building a community and starting a makerspace in metro Atlanta. <br class="d-none d-md-block"/>
+                    <strong>Want to find out more?</strong> Sign up below to get first access to what's coming.</p>
                 </div>
             </div>
 
             <div class="container d-none d-lg-block" >
                 <div class="row justify-content-lg-center">
                     <div class="col col-lg-auto">
-                        <form class="form-inline" method="POST" action="#">
+                        <form class="form-inline">
                             <div class="input-group mr-2">
                                 <input type="text" class="form-control" placeholder="First name" name="first_name" required/>
                             </div>
@@ -44,7 +45,7 @@
                             </div>
 
                             <div class="input-group">
-                                <input type="submit" class="btn btn-info" value="Submit"/>
+                                <input type="submit" class="btn btn-info" onclick="formSubmit()"value="Submit"/>
                             </div>
                         </form>
                     </div>
@@ -81,6 +82,7 @@
     <script src="/assets/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="/assets/js/typed.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="/assets/js/app.js"></script>
 </body>
 </html>
