Added MailChimp form integration

--- a/public/index.html
+++ b/public/index.html
@@ -31,21 +31,24 @@
             <div class="container d-none d-lg-block" >
                 <div class="row justify-content-lg-center">
                     <div class="col col-lg-auto">
-                        <form class="form-inline">
+                        <form class="form-inline" action="https://morrowmade.us17.list-manage.com/subscribe/post?u=8f1ce7e73051f74d73dc0fae1&amp;id=cb816bff18" method="post">
                             <div class="input-group mr-2">
-                                <input type="text" class="form-control" placeholder="First name" name="first_name" required/>
+                                <input type="text" class="form-control" placeholder="First name" name="FNAME" required/>
                             </div>
 
                             <div class="input-group mr-2">
-                                <input type="text" class="form-control" placeholder="Last name" name="last_name" required/>
+                                <input type="text" class="form-control" placeholder="Last name" name="LNAME" required/>
                             </div>
                              
                             <div class="input-group mr-2">
-                                <input type="email" class="form-control" placeholder="Email" name="email" required/>
+                                <input type="email" placeholder="Email" name="EMAIL" class="form-control" id="mce-EMAIL" required/>
                             </div>
 
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8f1ce7e73051f74d73dc0fae1_cb816bff18" tabindex="-1" value=""></div>
+
                             <div class="input-group">
-                                <input type="submit" class="btn btn-info" onclick="formSubmit()"value="Submit"/>
+                                <input type="submit" class="btn btn-info" id="mc-embedded-subscribe" value="Submit"/>
                             </div>
                         </form>
                     </div>
@@ -55,21 +58,24 @@
             <div class="container d-lg-none">
                 <div class="row justify-content-lg-center">
                     <div class="col col-lg-auto">
-                        <form class="form" method="POST" action="#">
+                        <form class="form" action="https://morrowmade.us17.list-manage.com/subscribe/post?u=8f1ce7e73051f74d73dc0fae1&amp;id=cb816bff18" method="post">
                             <div class="form-group mr-2">
-                                <input type="text" class="form-control" placeholder="First name" name="first_name" required/>
+                                <input type="text" class="form-control" placeholder="First name" name="FNAME" required/>
                             </div>
 
                             <div class="form-group mr-2">
-                                <input type="text" class="form-control" placeholder="Last name" name="last_name" required/>
+                                <input type="text" class="form-control" placeholder="Last name" name="LNAME" required/>
                             </div>
                              
                             <div class="form-group mr-2">
-                                <input type="email" class="form-control" placeholder="Email" name="email" required/>
+                                <input type="email" placeholder="Email" name="EMAIL" class="form-control" id="mce-EMAIL" required/>
                             </div>
 
+                             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8f1ce7e73051f74d73dc0fae1_cb816bff18" tabindex="-1" value=""></div>
+
                             <div class="form-group">
-                                <input type="submit" class="btn btn-info btn-block" value="Submit"/>
+                                <input type="submit" class="btn btn-info btn-block" id="mc-embedded-subscribe" value="Submit"/>
                             </div>
                         </form>
                     </div>
