--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <link type="text/css" rel="stylesheet" href="/assets/css/bootstrap.min.css" />
     <link type="text/css" rel="stylesheet" href="/assets/css/app.css" />
     <meta name="viewport" content="initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="/assets/img/favicon.png"/>
+    <link rel="apple-touch-icon" href="/assets/img/favicon.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
 </head>
 <body>
     <div class="content">
