--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
             </div>
 
             <div class="row justify-content-lg-center">
-                <div class="col-lg-10">
-                    <p class="lead"><span class="text-info" id="morrowmade-lead">Morrowmade is a place for innovators.</span><br/>We're building a community and starting a makerspace in metro Atlanta. <br class="d-none d-md-block"/>
-                    <strong>Want to find out more?</strong> Sign up below to get first access to what's coming.</p>
+                <div class="col-lg-12">
+                    <p class="lead"><span class="text-info" id="morrowmade-lead">Morrowmade is a place for innovators.</span><br/>We're a community of makers, hackers, and creatives in metro Atlanta doing work that matters. <br />
+                    <strong> Sign up below to get first access to what's coming.</strong></p>
                 </div>
             </div>
 
